<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_inicial"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/CustomToolbar"/>

    <View
        android:id="@+id/toolbar_shadow_inicial"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/toolbar_inicial"
        android:background="@drawable/toolbar_dropshadow" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"        >
        <LinearLayout
            android:id="@+id/ll_01_inicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_leitura_inicial"
                    android:text="@string/reading"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_bluetooth_inicial"
                    android:text="@string/bluetooth"
                    android:textAllCaps="false"
                    android:layout_margin="5dp"
                    android:textColor="#000000"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:textSize="16sp" />

            </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_02_inicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_01_inicial">
                <Button
                    android:id="@+id/btn_addclass_inicial"
                    android:text="@string/btclass"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_config_inicial"
                    android:text="@string/config"
                    android:textAllCaps="false"
                    android:layout_margin="5dp"
                    android:textColor="#000000"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:textSize="16sp" />

            </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
