<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll01_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="end">

        <ImageButton
            android:id="@+id/bt_settings_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_settings_24"
            android:backgroundTint="@color/md_white_1000"
            android:paddingEnd="20dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        android:layout_below="@+id/ll01_login">

        <TextView
            android:id="@+id/tv01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv01"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actext_username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/ti_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ti_username_login"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="90">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/actext_password_login"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"/>


            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/iv_visiblepassword_login"
                android:layout_width="0dip"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_visibility_off_24"
                android:backgroundTint="@color/md_white_1000"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/bt_confirm_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/ti_password_login"
            android:text="@string/confirm"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

</RelativeLayout>