<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="18dp"
        android:layout_marginHorizontal="18dp">

    <LinearLayout
        android:id="@+id/ll01_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_ip_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actext_ip_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll02_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@+id/ll01_config">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_porta_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actext_porta_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/porta"
                android:maxLines="1"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@+id/ll02_config">

        <TextView
            android:id="@+id/tv_rfpotencia_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="Potência:"
            />

        <com.warkiz.tickseekbar.TickSeekBar
            android:id="@+id/spin_rfpotencia_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tsb_max="33"
            android:layout_weight="1"
            app:tsb_min="5"
            app:tsb_track_background_size="5dp"
            app:tsb_track_progress_size="5dp"
            app:tsb_tick_texts_size="16dp"
            app:tsb_progress="100"
            app:tsb_show_thumb_text="above"
            app:tsb_thumb_color="@color/md_black_1000"
            app:tsb_thumb_text_color="@color/md_black_1000"
            app:tsb_track_progress_color="@color/md_black_1000"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save_config"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/save"
        android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</RelativeLayout>